--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
         .quiz-container::before {
             content: '';
             position: absolute;
-            top: 0;
+            top: 44px;
             left: 0;
             right: 0;
-            height: 44px;
-            background: #f2f2f7;
-            border-bottom: 0.5px solid rgba(0, 0, 0, 0.1);
+            height: 0.5px;
+            background: rgba(0, 0, 0, 0.1);
         }
 
         .status-bar {
@@ -416,7 +415,7 @@
     <div class="quiz-container">
         <div class="status-bar">
             <span>9:41</span>
-            <span>Club Quiz</span>
+            <span>welcome, valley !</span>
             <span>🔋 100%</span>
         </div>
         
